--- a/views/Shop.ejs
+++ b/views/Shop.ejs
@@ -3,12 +3,9 @@
 <script src="/scripts/shop/infiniteShops.js"></script>
 <script src="/scripts/cart.js"></script>
     <div class="container">
-      <div class="text-center mb-4">
-        <button class="tab-btn" onclick="openTab(this, 'original')">Toiles originales</button>
-        <button class="tab-btn active" onclick="openTab(this, 'print')">Produits dérivés</button>
-      </div>
         <div class="container-single" id="container-shop">
-            <div id="original" class="tab container-shop" style="display:none">
+            <h1 class="single-title">Toile Originale</h1>
+            <div id="original" class="tab container-shop">
               <% if (locals.original){ %>
                 <% Object.keys(locals.original).forEach(function (index) { %>
                   <% if (locals.original[index].isUnique) { %>
@@ -37,36 +34,10 @@
                 <h1 class="alertEmpty">Plus de toiles originales en stock!</h1>
               <% } %>
           </div>
-          <div id="print" class="tab container-shop">
-              <% if(locals.print){ %>
-                <% Object.keys(locals.print).forEach(function (index) { %>
-                  <% if (!locals.print[index].isUnique) { %>
-                  <div class="card" id="<%= locals.print[index]._id %>">
-                    <a class="card-img-expand" href="/Shop/<%= locals.print[index]._id %>"><img src="/api/image/<%= locals.print[index].mainImgId %>" class="card-img-top" alt="<%= locals.print[index].title %>"></a>
-                    <div class="card-body">
-                      <h5 class="card-title"><i><a href="/Shop/<%= locals.print[index]._id %>"><%= locals.print[index].shorttitle %></a></i></h5>
-                      <p class="card-text gallery-description mb-5"><%= locals.print[index].shortcontent %></p>
-                      <div class="row shop-price-row mt-4">
-                        <div class="shop-price-col col-6">
-                          <b class="card-price"><%= locals.print[index].price %>€</b>
-                          <% if (locals.print[index].isUnique) { %>
-                            <b class="isUnique">Toile unique</b>
-                          <% } %>
-                        </div>
-                        <div class="col-6">
-                          <input type="submit" class="logbtn" value="Ajouter au panier" onclick="cartAdd('<%= locals.print[index]._id %>', this)">
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <% } %>
-                <% }) %>
-              <% } %>
-          </div>
           </div>
           <div class="col-6 offset-3 mt-5">
             <img id="loader" src="/img/loader.gif">
-            <input id="infinitebtn" type="submit" class="logbtn" value="Load more" onclick="infiniteShopItems('original');">
+            <input id="infinitebtn" type="submit" class="logbtn" value="Load more" onclick="infiniteShopItems();">
           </div>
       </div>
       
