--- a/views/restricted/Shop-post.ejs
+++ b/views/restricted/Shop-post.ejs
@@ -1,62 +1,37 @@
 <% include ../partials/head %>
 
-<div class="container container-single"> 
-    <div class="single-wrapper col-8 offset-2">
-        <h1 class="single-title">Ajouter un item à la boutique</h1>
-        <form class="col-8 offset-2" id="shop" method="POST" action="/api/shop/post" enctype="multipart/form-data" onsubmit="postShop(event);">
-            <hr /> 
-            <div class="form-group">
-                <label class="control-label">Titre</label>
-                <input class="form-control" type="text" name="title" id="title" placeholder="Titre" onkeyup="Validate.String(this, 1, 256);" required>
-                <span id="i_title" class="form-info">Title must contain between 1 and 256 characters</span>
-            </div>
+<div class="container container-single">
+	<div class="single-wrapper col-8 offset-2">
+		<h1 class="single-title">Ajouter un item à la boutique</h1>
+		<form class="col-8 offset-2" id="shop" method="POST" action="/api/shop/post" enctype="multipart/form-data" onsubmit="postShop(event);">
+			<hr />
+			<div class="form-group">
+				<label class="control-label">Titre</label>
+				<input class="form-control" type="text" name="title" id="title" placeholder="Titre" onkeyup="Validate.String(this, 1, 256);" required />
+				<span id="i_title" class="form-info">Title must contain between 1 and 256 characters</span>
+			</div>
 
-            <div class="form-group">
-                <label class="control-label">Description</label>
-                <textarea class="instructions-textarea" id="content" name="content" placeholder="Description de l'item..." onkeyup="Validate.String(this, 1, 2048);" required></textarea>
-                <span id="i_content" class="form-info">Content must contain between 1 and 2048 characters</span>  
-            </div>
+			<div class="form-group">
+				<label class="control-label">Description</label>
+				<textarea class="instructions-textarea" id="content" name="content" placeholder="Description de l'item..." onkeyup="Validate.String(this, 1, 2048);" required></textarea>
+				<span id="i_content" class="form-info">Content must contain between 1 and 2048 characters</span>
+			</div>
 
-            <div class="form-group">
-                <label class="control-label">Prix</label>
-                <input placeholder="35.50 (au centième d'euro près)" class="form-control" type="number" min="1" id="price" name="price" step=".01" required>
-            </div>
-            
-            <div class="form-group text-center">
-                <label class="control-label">Cochez si l'exemplaire est unique</label><br />
-                <input type="checkbox" name="isUnique" id="isUnique">
-            </div>
+			<div class="form-group">
+				<label class="control-label">Prix</label>
+				<input placeholder="35.50 (au centième d'euro près)" class="form-control" type="number" min="1" id="price" name="price" step=".01" required />
+			</div>
 
-            <!-- check image data, then display all available pwinty options -->
-            <!--
-            <div class="pwinty-products">
-                <div class="form-group text-center">
-                    <label for="sku">
-                        <div class="sku-item unselectable">
-                            <p>Type of product</p>
-                            <input name="sku" id="sku" value="sku" type="checkbox">
-                        </div>
-                    </label>
+			<div class="form-group text-center">
+				<label for="img" id="imglabel" class="filebtn">Choisir des images</label>
+				<input class="inputfile" type="file" name="img" id="img" onchange="readURL(this)" multiple required />
+			</div>
 
-                    <label for="sku2">
-                        <div class="sku-item unselectable">
-                            <p>Type of product</p>
-                            <input name="sku2" id="sku2" value="sku2" type="checkbox">
-                        </div>
-                    </label>
-                </div>
-            </div>-->
-           
-            <div class="form-group text-center">
-                <label for="img" id="imglabel" class="filebtn">Choisir des images</label>
-                <input class="inputfile" type="file" name="img" id="img" onchange="readURL(this)" multiple required>
-            </div>
-
-            <input type="submit" class="logbtn" value="Valider" id="submit-shop">
-        </form>
-    </div>
+			<input type="submit" class="logbtn" value="Valider" id="submit-shop" />
+		</form>
+	</div>
 </div>
-  
+
 <script src="/scripts/shop/shopScripts.js"></script>
 <script src="/scripts/frontValidation.js"></script>
 <% include ../partials/footer %>
