--- a/views/restricted/OrderNotApproved.ejs
+++ b/views/restricted/OrderNotApproved.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/head %>
 
-<script src="/scripts/order.js"></script>
+<script src="/scripts/orderApproval.js"></script>
 <div class="container container-single">
 	<div class="single-wrapper">
 		<h1 class="single-title">Commandes</h1>
@@ -33,7 +33,7 @@
 		</div>
 		<div class="col-6 offset-3 mb-3 mt-3">
 			<img id="loader" src="/img/loader.gif" style="width: 50px; height: 50px; margin: 5px auto 5px auto; display: none;" />
-			<input id="infinitebtn" type="submit" class="logbtn" value="Load more" onclick="infiniteOrders();" />
+			<input id="infinitebtn" type="submit" class="logbtn" value="Load more" onclick="infiniteApprovalOrders();" />
 		</div>
 	</div>
 </div>
