admin orders now display with tabs orders to approve/all orders with respective infiniteloading and toggling btn

--- a/views/restricted/Order-manage.ejs
+++ b/views/restricted/Order-manage.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/head %>
 
-<script src="/scripts/order.js"></script>
+<script src="/scripts/order/order.js"></script>
 <div class="container container-single"> 
   <div class="single-wrapper">
     <div class="col-10 offset-1">
