--- a/views/User.ejs
+++ b/views/User.ejs
@@ -1,146 +1,189 @@
 <% include partials/head %>
 
-<script src="/scripts/order.js"></script>
+<script src="/scripts/order/order.js"></script>
 
 <div class="container-with-menu container">
-  <div class="row row-height">
-    <div class="menu col-3">
-      <ul>
-        <li><a href="#" onclick="openTab(event, this, 'parameters')" class="menu-link active disabled"><i class="fas fa-cog mr-2"></i> Paramètres <i class="fas fa-chevron-right chev"></i></a></li>
-        <li><a href="#" onclick="openTab(event, this, 'purchases')" class="menu-link"><i class="fas fa-truck mr-2"></i> Achats  <i class="fas fa-chevron-right chev"></i></a></li>
-        <li><a href="/shopping-cart"><i class="fas fa-shopping-cart mr-2"></i> Panier</a></li>
-      </ul>
-    </div>
+	<div class="row row-height">
+		<div class="menu col-3">
+			<ul>
+				<li>
+					<a href="#" onclick="openTab(event, this, 'parameters')" class="menu-link active disabled"><i class="fas fa-cog mr-2"></i> Paramètres <i class="fas fa-chevron-right chev"></i></a>
+				</li>
+				<li>
+					<a href="#" onclick="openTab(event, this, 'purchases')" class="menu-link"><i class="fas fa-truck mr-2"></i> Achats <i class="fas fa-chevron-right chev"></i></a>
+				</li>
+				<li>
+					<a href="/shopping-cart"><i class="fas fa-shopping-cart mr-2"></i> Panier</a>
+				</li>
+			</ul>
+		</div>
 
-    <div id="parameters" class="tab col-9 row">
-      <section class="user-section col-5">
-        <div class="section-heading">
-          <h2>Compte</h2>
-          <h6>Gardez ces informations pour vous!</h6>
-        </div>
+		<div id="parameters" class="tab col-9 row">
+			<section class="user-section col-5">
+				<div class="section-heading">
+					<h2>Compte</h2>
+					<h6>Gardez ces informations pour vous!</h6>
+				</div>
 
-        <form id="nameform" method="POST" action="/api/user/patch/name">
-          <label class="control-label">Nom de compte</label>
-          <input class="form-control" type="text" id="name" name="name" value="<% if (locals.name) { %><%= locals.name %><% } %>" onkeyup="Validate.String(this, 4, 30);" required>
-          <span id="i_name" class="form-info"><b>Username</b> must contain between <b>4 and 30 characters</b></span>
-          <input type="submit" class="logbtn mt-2" value="Modifier" id="submit-nameform">
-        </form>
-       
-        <form id="emailform" method="POST" action="/api/user/patch/email">
-          <label class="control-label">Email</label>
-          <input class="form-control" type="email" id="email" name="email" value="<% if (locals.email) { %><%= locals.email %><% } %>" onkeyup="Validate.Email(this);" required>
-          <span id="i_email" class="form-info"><b>E-mail</b> has to be <b>valid</b></span>
-          <input type="submit" class="logbtn mt-2" value="Modifier" id="submit-emailform">
-        </form>
-     
-        <form id="passwordform" method="POST" action="/api/user/patch/password">
-          <label class="control-label">Mot de passe <i>(actuel)</i></label>
-          <input class="form-control" type="password" name="cpassword" placeholder="*********" required>
-          <span data-placeholder="Current Password"></span>
+				<form id="nameform" method="POST" action="/api/user/patch/name">
+					<label class="control-label">Nom de compte</label>
+					<input class="form-control" type="text" id="name" name="name" value="<% if (locals.name) { %><%= locals.name %><% } %>" onkeyup="Validate.String(this, 4, 30);" required />
+					<span id="i_name" class="form-info"><b>Username</b> must contain between <b>4 and 30 characters</b></span>
+					<input type="submit" class="logbtn mt-2" value="Modifier" id="submit-nameform" />
+				</form>
 
-          <label class="control-label mt-3">Mot de passe <i>(nouveau)</i></label>
-          <input class="form-control" type="password" id="password" name="password" placeholder="*********" onkeyup="Validate.Password(this);" required>
-          <span id="i_password" class="form-info"><b>Password</b> must contain between <b>8 and 256 characters</b> and has to be atleast <b>alphanumeric</b></span>
+				<form id="emailform" method="POST" action="/api/user/patch/email">
+					<label class="control-label">Email</label>
+					<input class="form-control" type="email" id="email" name="email" value="<% if (locals.email) { %><%= locals.email %><% } %>" onkeyup="Validate.Email(this);" required />
+					<span id="i_email" class="form-info"><b>E-mail</b> has to be <b>valid</b></span>
+					<input type="submit" class="logbtn mt-2" value="Modifier" id="submit-emailform" />
+				</form>
 
-          <label class="control-label">Mot de passe <i>(confirmation)</i></label>
-          <input class="form-control" type="password" id="password2" name="password2" placeholder="*********" onkeyup="Validate.Password2(this);" required>
-          <span id="i_password2" class="form-info"><b>Password</b> has to be the <b>identical</b> to the one you just entered</span>
-          <input type="submit" class="logbtn mt-2" value="Modifier" id="submit-passwordform">
-        </form>
-      </section>
-      <section class="user-section col-7">
-        <div class="section-heading">
-          <h2>Livraison</h2>
-          <h6>Nous utiliserons ces informations pour livrer vos commandes</h6>
-        </div>
-          <form id="deliveryform" method="POST" action="/api/user/patch/delivery-info">
-            <div class="row">
-              <div class="col-md-6">
-                <label class="control-label">Nom</label>
-                <input class="form-control" id="lastname" name="lastname" placeholder="Doe" value="<% if (locals.delivery.lastname) { %><%= locals.delivery.lastname %><% } %>" onkeyup="Validate.String(this, 2, 128);" required>
-                <span id="i_lastname" class="form-info"><b>Last Name</b> must contain between <b>2 and 128 characters</b></span>
-              </div>
-              <div class="col-md-6">
-                <label class="control-label">Prénom</label>
-                <input class="form-control" id="firstname" name="firstname" placeholder="John" value="<% if (locals.delivery.firstname) { %><%= locals.delivery.firstname %><% } %>" onkeyup="Validate.String(this, 2, 128);" required>
-                <span id="i_firstname" class="form-info"><b>First Name</b> must contain between <b>2 and 128 characters</b></span>
-              </div>
-            </div>
-  
-            <label class="control-label">Adresse</label>        
-            <input id="autocomplete" name="fulltext_address" placeholder="Enter your address" onFocus="geolocate()" class="form-control" value="<% if (locals.delivery.full_address) { %><%= locals.delivery.full_address %><% } %>" required>
-            
-            <div id="address">
-              <div class="row">
-                <div class="col-md-12">
-                  <label class="control-label">Route</label>
-                  <input class="form-control" id="route" placeholder="13 rue de Clignancourt" name="street_name" value="<% if (locals.delivery.full_street) { %><%= locals.delivery.full_street %><% } %>" required>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-6">
-                  <label class="control-label">Ville</label>
-                  <input class="form-control field" id="locality" name="city" placeholder="Paris" value="<% if (locals.delivery.city) { %><%= locals.delivery.city %><% } %>" required>
-                </div>
-                <div class="col-md-6"> 
-                  <label class="control-label">Région</label>
-                  <input class="form-control" id="administrative_area_level_1" name="state" placeholder="Île-de-France" value="<% if (locals.delivery.state) { %><%= locals.delivery.state %><% } %>" required>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-6">
-                  <label class="control-label">Code Postal</label>
-                  <input class="form-control" id="postal_code" name="postal_code" placeholder="75001" value="<% if (locals.delivery.zipcode) { %><%= locals.delivery.zipcode %><% } %>" required>
-                </div>
-                <div class="col-md-6">
-                  <label class="control-label">Pays</label>
-                  <input class="form-control" id="country" name="country" placeholder="France" value="<% if (locals.delivery.country) { %><%= locals.delivery.country %><% } %>" required>
-                </div>
-              </div>
-              <div class="row mt-4">
-                <div class="col-6">
-                  <textarea id="instructions" class="instructions-textarea" name="instructions" placeholder="Door code or other useful informations..."><% if (locals.delivery.instructions) { %><%= locals.delivery.instructions %><% } %></textarea>
-                </div>
-                <div class="col-6">
-                <input type="submit" class="logbtn" value="Enregistrer" id="submit-deliveryform">
-              </div>
-              </div>
-            </div>
-            
-          </form>
-      </section>
-    </div>
+				<form id="passwordform" method="POST" action="/api/user/patch/password">
+					<label class="control-label">Mot de passe <i>(actuel)</i></label>
+					<input class="form-control" type="password" name="cpassword" placeholder="*********" required />
+					<span data-placeholder="Current Password"></span>
 
-    <div id="purchases" class="tab col-9" style="display: none;">
-      <section class="purchase-section">
-        <table class="table table-striped table-hover">
-          <thead>
-            <tr>
-              <th scope="col">Date</th>
-              <th scope="col">Status</th>
-              <th scope="col">Prix</th>
-              <th scope="col">Acheteur</th>
-              <th scope="col">#ID</th>
-            </tr>
-          </thead>
+					<label class="control-label mt-3">Mot de passe <i>(nouveau)</i></label>
+					<input class="form-control" type="password" id="password" name="password" placeholder="*********" onkeyup="Validate.Password(this);" required />
+					<span id="i_password" class="form-info"><b>Password</b> must contain between <b>8 and 256 characters</b> and has to be atleast <b>alphanumeric</b></span>
 
-          <tbody>
-            <% if (locals.orders) { %>
-              <% Object.keys(locals.orders).forEach(function (index) { %>
-                <tr>
-                  <th scope="row" class="date-grid"><%= locals.orders[index].date_f %></th>
-                  <td class="status-grid"><%= locals.orders[index].status %></td>
-                  <td class="price-grid"><%= locals.orders[index].price %>€</td>
-                  <td class="name-grid"><%= locals.orders[index].firstname[0] %>. <%= locals.orders[index].lastname %></td>
-                  <td class="id-grid"><a href="/Order/<%= locals.orders[index]._id %>">#<%= locals.orders[index]._id %></a></td>
-                </tr>
-              <% }) %>
-            <% } %>
-          </tbody>
-        </table>
-      </section>
-    </div>
-  </div>
+					<label class="control-label">Mot de passe <i>(confirmation)</i></label>
+					<input class="form-control" type="password" id="password2" name="password2" placeholder="*********" onkeyup="Validate.Password2(this);" required />
+					<span id="i_password2" class="form-info"><b>Password</b> has to be the <b>identical</b> to the one you just entered</span>
+					<input type="submit" class="logbtn mt-2" value="Modifier" id="submit-passwordform" />
+				</form>
+			</section>
+			<section class="user-section col-7">
+				<div class="section-heading">
+					<h2>Livraison</h2>
+					<h6>Nous utiliserons ces informations pour livrer vos commandes</h6>
+				</div>
+				<form id="deliveryform" method="POST" action="/api/user/patch/delivery-info">
+					<div class="row">
+						<div class="col-md-6">
+							<label class="control-label">Nom</label>
+							<input
+								class="form-control"
+								id="lastname"
+								name="lastname"
+								placeholder="Doe"
+								value="<% if (locals.delivery.lastname) { %><%= locals.delivery.lastname %><% } %>"
+								onkeyup="Validate.String(this, 2, 128);"
+								required
+							/>
+							<span id="i_lastname" class="form-info"><b>Last Name</b> must contain between <b>2 and 128 characters</b></span>
+						</div>
+						<div class="col-md-6">
+							<label class="control-label">Prénom</label>
+							<input
+								class="form-control"
+								id="firstname"
+								name="firstname"
+								placeholder="John"
+								value="<% if (locals.delivery.firstname) { %><%= locals.delivery.firstname %><% } %>"
+								onkeyup="Validate.String(this, 2, 128);"
+								required
+							/>
+							<span id="i_firstname" class="form-info"><b>First Name</b> must contain between <b>2 and 128 characters</b></span>
+						</div>
+					</div>
+
+					<label class="control-label">Adresse</label>
+					<input
+						id="autocomplete"
+						name="fulltext_address"
+						placeholder="Enter your address"
+						onFocus="geolocate()"
+						class="form-control"
+						value="<% if (locals.delivery.full_address) { %><%= locals.delivery.full_address %><% } %>"
+						required
+					/>
+
+					<div id="address">
+						<div class="row">
+							<div class="col-md-12">
+								<label class="control-label">Route</label>
+								<input
+									class="form-control"
+									id="route"
+									placeholder="13 rue de Clignancourt"
+									name="street_name"
+									value="<% if (locals.delivery.full_street) { %><%= locals.delivery.full_street %><% } %>"
+									required
+								/>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-6">
+								<label class="control-label">Ville</label>
+								<input class="form-control field" id="locality" name="city" placeholder="Paris" value="<% if (locals.delivery.city) { %><%= locals.delivery.city %><% } %>" required />
+							</div>
+							<div class="col-md-6">
+								<label class="control-label">Région</label>
+								<input
+									class="form-control"
+									id="administrative_area_level_1"
+									name="state"
+									placeholder="Île-de-France"
+									value="<% if (locals.delivery.state) { %><%= locals.delivery.state %><% } %>"
+									required
+								/>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-6">
+								<label class="control-label">Code Postal</label>
+								<input class="form-control" id="postal_code" name="postal_code" placeholder="75001" value="<% if (locals.delivery.zipcode) { %><%= locals.delivery.zipcode %><% } %>" required />
+							</div>
+							<div class="col-md-6">
+								<label class="control-label">Pays</label>
+								<input class="form-control" id="country" name="country" placeholder="France" value="<% if (locals.delivery.country) { %><%= locals.delivery.country %><% } %>" required />
+							</div>
+						</div>
+						<div class="row mt-4">
+							<div class="col-6">
+								<textarea id="instructions" class="instructions-textarea" name="instructions" placeholder="Door code or other useful informations...">
+<% if (locals.delivery.instructions) { %><%= locals.delivery.instructions %><% } %></textarea
+								>
+							</div>
+							<div class="col-6">
+								<input type="submit" class="logbtn" value="Enregistrer" id="submit-deliveryform" />
+							</div>
+						</div>
+					</div>
+				</form>
+			</section>
+		</div>
+
+		<div id="purchases" class="tab col-9" style="display: none;">
+			<section class="purchase-section">
+				<table class="table table-striped table-hover">
+					<thead>
+						<tr>
+							<th scope="col">Date</th>
+							<th scope="col">Status</th>
+							<th scope="col">Prix</th>
+							<th scope="col">Acheteur</th>
+							<th scope="col">#ID</th>
+						</tr>
+					</thead>
+
+					<tbody>
+						<% if (locals.orders) { %> <% Object.keys(locals.orders).forEach(function (index) { %>
+						<tr>
+							<th scope="row" class="date-grid"><%= locals.orders[index].date_f %></th>
+							<td class="status-grid"><%= locals.orders[index].status %></td>
+							<td class="price-grid"><%= locals.orders[index].price %>€</td>
+							<td class="name-grid"><%= locals.orders[index].firstname[0] %>. <%= locals.orders[index].lastname %></td>
+							<td class="id-grid"><a href="/Order/<%= locals.orders[index]._id %>">#<%= locals.orders[index]._id %></a></td>
+						</tr>
+						<% }) %> <% } %>
+					</tbody>
+				</table>
+			</section>
+		</div>
+	</div>
 </div>
 
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBluorKuf7tdOULcDK08oZ-98Vw7_12TMI&libraries=places&callback=initAutocomplete" async defer></script>
