--- a/views/restricted/Orders.ejs
+++ b/views/restricted/Orders.ejs
@@ -1,10 +1,16 @@
 <% include ../partials/head %>
 
-<script src="/scripts/order.js"></script>
+<script src="/scripts/order/order.js"></script>
+<script src="/scripts/order/infiniteOrders.js"></script>
 <div class="container container-single">
+	<div class="text-center mb-4">
+		<button class="tab-btn active" onclick="openTab(this, 'approval')">En attente d'approbation</button>
+		<button class="tab-btn" onclick="openTab(this, 'all')">Toutes les commandes</button>
+	</div>
 	<div class="single-wrapper">
 		<h1 class="single-title">Commandes</h1>
-		<div id="purchases" class="tab col-10 offset-1">
+
+		<div id="approval" class="tab col-10 offset-1">
 			<section class="purchase-section">
 				<table class="table table-striped table-hover">
 					<thead>
@@ -17,14 +23,42 @@
 						</tr>
 					</thead>
 
-					<tbody id="container-admin-orders">
-						<% if (locals.orders) { %> <% Object.keys(locals.orders).forEach(function (index) { %>
+					<tbody id="container-admin-orders-approval">
+						<% if (locals.approval) { %> <% Object.keys(locals.approval).forEach(function (index) { %>
 						<tr>
-							<th scope="row" class="date-grid"><%= locals.orders[index].date_f %></th>
-							<td class="status-grid"><%= locals.orders[index].status %></td>
-							<td class="price-grid"><%= locals.orders[index].price %>€</td>
-							<td class="name-grid"><%= locals.orders[index].firstname[0] %>. <%= locals.orders[index].lastname %></td>
-							<td class="id-grid"><a id="<%= locals.orders[index]._id %>" href="/Admin/Order/<%= locals.orders[index]._id %>">#<%= locals.orders[index]._id %></a></td>
+							<th scope="row" class="date-grid"><%= locals.approval[index].date_f %></th>
+							<td class="status-grid"><%= locals.approval[index].status %></td>
+							<td class="price-grid"><%= locals.approval[index].price %>€</td>
+							<td class="name-grid"><%= locals.approval[index].firstname[0] %>. <%= locals.approval[index].lastname %></td>
+							<td class="id-grid"><a id="approval-<%= locals.approval[index]._id %>" href="/Admin/Order/<%= locals.approval[index]._id %>">#<%= locals.approval[index]._id %></a></td>
+						</tr>
+						<% }) %> <% } %>
+					</tbody>
+				</table>
+			</section>
+		</div>
+
+		<div id="all" class="tab col-10 offset-1" style="display: none;">
+			<section class="purchase-section">
+				<table class="table table-striped table-hover">
+					<thead>
+						<tr>
+							<th scope="col">Date</th>
+							<th scope="col">Status</th>
+							<th scope="col">Prix</th>
+							<th scope="col">Acheteur</th>
+							<th scope="col">#ID</th>
+						</tr>
+					</thead>
+
+					<tbody id="container-admin-orders-all">
+						<% if (locals.all) { %> <% Object.keys(locals.all).forEach(function (index) { %>
+						<tr>
+							<th scope="row" class="date-grid"><%= locals.all[index].date_f %></th>
+							<td class="status-grid"><%= locals.all[index].status %></td>
+							<td class="price-grid"><%= locals.all[index].price %>€</td>
+							<td class="name-grid"><%= locals.all[index].firstname[0] %>. <%= locals.all[index].lastname %></td>
+							<td class="id-grid"><a id="all-<%= locals.all[index]._id %>" href="/Admin/Order/<%= locals.all[index]._id %>">#<%= locals.all[index]._id %></a></td>
 						</tr>
 						<% }) %> <% } %>
 					</tbody>
@@ -33,7 +67,7 @@
 		</div>
 		<div class="col-6 offset-3 mb-3 mt-3">
 			<img id="loader" src="/img/loader.gif" style="width: 50px; height: 50px; margin: 5px auto 5px auto; display: none;" />
-			<input id="infinitebtn" type="submit" class="logbtn" value="Load more" onclick="infiniteOrders();" />
+			<input id="infinitebtn" type="submit" class="logbtn" value="Load more" onclick="infiniteOrders('approval');" />
 		</div>
 	</div>
 </div>
